--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <title> Origami Designs </title>
     <style>  
      h1{
-                color: red
+                color:black
             }
             body{
-                background: blue;
-                color: yellow;
+                background: white;
+                color: red;
             }
    </style>
 </head>
@@ -17,7 +17,7 @@
            <h1> Origami Designs </h1>
       <b>1. Origami Panda</b>
         <a href = "http://origami.me/panda/"><img src="panda.png" width=185 height=185/></a>
-        <p>Click here to see the step-by-step tutorial  <a href="http://origami.me/panda/" target="_blank" style="color:red">here</a></p>
+        <p>Click here to see the step-by-step tutorial  <a href="http://origami.me/panda/" target="_blank" style="color:purple">here</a></p>
         <br>
            <i>Some interesting facts about panda's:</i>
           <ul>
@@ -29,7 +29,7 @@
         <br>
         <b>2. Origami Chameleon</b>
           <a href = "http://origami.me/chameleon/"><img src="chameleon.png" width=185 height=185/></a>
-          <p>Click here to see the step-by-step tutorial  <a href="http://origami.me/chameleon/" target="_blank" style="color:red">here</a></p>
+          <p>Click here to see the step-by-step tutorial  <a href="http://origami.me/chameleon/" target="_blank" style="color:purple">here</a></p>
           <br>
              <i>Some interesting facts about chameleon's:</i>
           <ul>
@@ -41,7 +41,7 @@
         <br>
         <b>3. Origami Flying Cicada</b>
          <a href = "http://origami.me/flying-cicada/"><img src="cicada.png" width=185 height=185/></a>
-         <p>Click here to see the step-by-step tutorial  <a href="http://origami.me/flying-cicada/" target="_blank" style="color:red">here</a></p>
+         <p>Click here to see the step-by-step tutorial  <a href="http://origami.me/flying-cicada/" target="_blank" style="color:purple">here</a></p>
          <br>
          <i>Some interesting facts about cicada's:</i>
          <ul>  
@@ -53,7 +53,7 @@
         <br>
         <b>4. Origami Pigeon</b>
         <a href = "http://origami.me/pigeon/"><img src="pigeon.png" width=185 height=185/></a>
-        <p>Click here to see the step-by-step tutorial <a href="http://origami.me/pigeon/" target="_blank" style="color:red">here</a></p>
+        <p>Click here to see the step-by-step tutorial <a href="http://origami.me/pigeon/" target="_blank" style="color:purple">here</a></p>
         <br>
         <i>Some interesting facts about pigeon's:</i>
         <ul>
@@ -65,7 +65,7 @@
         <br>
         <b>5. Origami Teddy-Bear</b>
         <a href = "http://origami.me/teddy-bear/"><img src="teddy.png" width=185 height=185/></a>
-        <p>Click here to see the step-by-step tutorial <a href="http://origami.me/teddy-bear/" target="_blank" style="color:red">here</a></p>
+        <p>Click here to see the step-by-step tutorial <a href="http://origami.me/teddy-bear/" target="_blank" style="color:purple">here</a></p>
         <br>
         <i>Some interesting facts about teddy bear's:</i>
         <ul>
@@ -77,7 +77,7 @@
        <br>
         <b>6. Origami Camel</b>
         <a href = "http://origami.me/camel/"><img src="camel.png" width=185 height=185/></a>
-        <p>Click here to see the step-by-step tutorial <a href="http://origami.me/camel/" target="_blank" style="color:red">here</a></p>
+        <p>Click here to see the step-by-step tutorial <a href="http://origami.me/camel/" target="_blank" style="color:purple">here</a></p>
         <br>
         <i>Some interesting facts about camel's:</i>
         <ul>
@@ -88,7 +88,7 @@
         <hr>
         <br>
         <a href="https://origami.me/" target="_blank" style="color:rgb(59, 229, 252)">About-Us</a><br>
-        <a href="https://github.com/skywalker-its" target="_blank" style="color:rgb(255, 0, 212)">Follow-Me</a>
+        <a href="https://github.com/Agarwalvedant83" target="_blank" style="color:rgb(255, 0, 212)">Follow-Me</a>
     </body>
 </html>
 
